[package]
name = "psio"
version = "0.1.0"
edition = "2021"
description = "Multi-format serialization: pssz, pjson, fracpack, Cap'n Proto, FlatBuffers, WIT, JSON, and more"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
custom_error = "1.9.2"
hex = "0.3.1"
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
serde-aux = "4.5"
psio-macros = { path = "../psio-macros" }
paste = "1"

# Competitor Rust libraries, gated behind features.  Default build
# (`cargo build`, `cargo test`) pulls nothing extra; benches opt in.
ethereum_ssz        = { version = "0.7",  optional = true }
ethereum_ssz_derive = { version = "0.7",  optional = true }
ssz_types           = { version = "0.8",  optional = true }
typenum             = { version = "1",    optional = true }
ssz_rs              = { version = "0.9",  optional = true }

[features]
default = []
bench_ethereum_ssz = ["dep:ethereum_ssz", "dep:ethereum_ssz_derive",
                       "dep:ssz_types", "dep:typenum"]
bench_ssz_rs       = ["dep:ssz_rs"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1"
borsh = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
rmp-serde = "1"
rkyv = { version = "0.8", features = ["bytecheck"] }

[[bench]]
name = "psio_vs_externals"
harness = false
