[package]
name = "psio3"
version = "0.1.0"
edition = "2021"
description = "v2-architecture serialization library — successor to psio"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
# psio3 is reflection + codec; the Rust crate stays dependency-light
# during development. Adds land as phases introduce them.

[dev-dependencies]
